--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
+    "react-tabs": "^6.1.0",
     "react-vertical-timeline-component": "^3.5.3",
     "typed-js": "^0.2.3",
     "typed.js": "^2.1.0",
