--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^12.19.2",
     "pdf-app": "^0.1.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
